gcc/testsuite/g++.dg/parse/error38.C
// PR c++/29003

typedef int operator !(); // { dg-error "declaration" }
